@@ -12,3 +12,4 @@ pm_to_blib
 \.sw?
 ^Math-BigRat-
 ^todos[\\\/]
+~\z
