@@ -4,7 +4,7 @@
       "Peter John Acklam <pjacklam@gmail.com>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "ExtUtils::MakeMaker version 7.24, CPAN::Meta::Converter version 2.150010",
+   "generated_by" : "ExtUtils::MakeMaker version 7.24, CPAN::Meta::Converter version 2.150001",
    "license" : [
       "perl_5"
    ],
@@ -39,6 +39,5 @@
       }
    },
    "release_status" : "stable",
-   "version" : "0.2611",
-   "x_serialization_backend" : "JSON::PP version 2.27400"
+   "version" : "0.2612"
 }
