@@ -15,16 +15,16 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 27f73198e217423061ddce2fc7c23db5724e3cd4 BUGS
-SHA1 1294e63950b30c520b14075cc13ee16c00098409 CHANGES
+SHA1 c8fc81d8c912bf3b8b4fdf8a22c9105bffd32603 CHANGES
 SHA1 d7c83d8f89b92a3262a01eb2778d39402e77263a LICENSE
 SHA1 a2ed822b605636b0e9885b7ddc0c036086300c50 MANIFEST
-SHA1 bd4ccb06fb3451d833350fdb4bd15e584c805cec MANIFEST.SKIP
-SHA1 f1010efde6d4e42c0cc969f0428a0faf5da7edaf META.json
-SHA1 69e80bea70ce1ae8c22fa9e48289cb749042d306 META.yml
+SHA1 2a97695db68802c5abd54d846f6fd7af88128a98 MANIFEST.SKIP
+SHA1 0e3143faa51a2b8012c65df452d300263a50e2cf META.json
+SHA1 bc74dcacc85627022834485d579190bd6fe13149 META.yml
 SHA1 64b8d8bb1873ca0b4bcec74aaeebcc4d510dc547 Makefile.PL
 SHA1 b6fa6ca5e4f70bd49f1e7d6a3cde3cd9e01936f5 README
 SHA1 2f2aa6a1b56f1b31bcffc30399813768ea310747 TODO
-SHA1 2e6d0f98f9de6c1b849bc261ac6bf4dbb6847010 lib/Math/BigRat.pm
+SHA1 885a982347ad2f83c9b1068a19e5d1725e8ffdf1 lib/Math/BigRat.pm
 SHA1 269da3400f1967b91dc3b6dd97fecd46b3242aee t/00sig.t
 SHA1 bc4d299a2e45cc68c9eb737e5a8f31bcfbf192ee t/01load.t
 SHA1 237e24044b9cc602f739d4eff3f6f1bd3b51f16e t/02pod.t
@@ -47,11 +47,11 @@ SHA1 3d2f66d534b29d1612427f280be8bb4fb20d18e4 t/requirer.t
 SHA1 bec1ee4ff69fa1927f542f488244fad188c6e06b t/trap.t
 -----BEGIN PGP SIGNATURE-----
 
-iQEcBAEBAgAGBQJYUEwuAAoJEGcmPl2fr166yyQH/0Iu/1Kg9kO7oLg3vbOP5iJZ
-84O11/tWorLtuwA4RgcPEQMXTbjthA/aLtOY3YeOvgYf6WGCngOQLrwVKub93S6W
-e96mGK8r7of1bXbhgUcAgvrPU783+6XQZgfSEK+dYpMuEG66QxgrIOYdiVx4AmGe
-Ra27iap+HBhwHNTbq9vm3cD55qXstfd15nY2Bu0TaFMyMmffdgLZP+o+f2yXc6Sc
-YoqrhM/zTJSJX8CM3+Yfy99kMmKRD+NHjJ9SYuuS78fUeeJxnDPUJ+a0zU3CrL3w
-L9CXyrZ57klMJycTFQAiQLFW/F7ZL+sU5Fj6oFfHybjE2s1cTZg5vmXFdRyC/Ek=
-=Buhc
+iQEcBAEBAgAGBQJYtr5nAAoJEGcmPl2fr166qNQIAIAiOD+poAo4eFTQhTifaLOP
+HLC+x8uogG6KmIzU60fYWMOurTmGQ2nFMUUGSNre9bmY66yQ/syhC5OoFKlqCIoq
+UOWc7YU6miqtYIFVBMeEhpP0l4vOhVN7+RC/ROb7zgeS2L4ih4YwnkFGJTrYRdSA
+mXpWfxo2OJY4jfVRNNiGy2rqgZeMBh21VV1as5QUw32Y8WWvnNyPNiR4aHcKV77t
+AvLVDuZXUQrqv43WEYAQ3HCgz2fI3stR7n2JNjRHeeoALPdfQpu8iGDzPahyHh8H
+YhRYlPMM+hYHFSxkk5Iu8Wvr6YQaQ1BTc51gfGd2I7Q+BePlGMgZorKHtdSTI18=
+=uvpc
 -----END PGP SIGNATURE-----
