@@ -1,3 +1,12 @@
+2017-03-01 v0.2612 pjacklam
+
+ * Improve the logic in blog() to determine how to call objectify(). The old,
+   simpler logic didn't handle an undefined base correctly.
+
+ * Fix bexp() which was objectifying one argument too many.
+
+ * Don't quote the version number of a use'd module.
+
 2016-12-13 v0.2611 pjacklam
 
  * Add more logic to Makefile.PL regarding INSTALLDIRS (CPAN RT #119199
